tests/negative/parser/top_level.orng
// top_level.orng:5:4: error: expected `fn`, `trait`, `impl`, or `const` here, got `123`
// 123
//   ^
// 
123